apps/media/copyparty-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: media
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: copyparty
  template:
    metadata:
      labels:
        app.kubernetes.io/name: copyparty
    spec:
      containers:
        # https://github.com/9001/copyparty/tree/hovudstraum/scripts/docker
        - name: copyparty
          image: ghcr.io/9001/copyparty-ac:1.20.25
          ports:
            - name: http
              containerPort: 3923
          volumeMounts:
            - name: config
              mountPath: /cfg/copyparty.conf
              subPath: copyparty.conf
            - name: hists
              mountPath: /cfg/hists
            - name: movies
              mountPath: /w/movies
              readOnly: true
            - name: movies4k
              mountPath: /w/movies4k
              readOnly: true
            - name: tv
              mountPath: /w/tv
              readOnly: true
            - name: tv4k
              mountPath: /w/tv4k
              readOnly: true
            - name: anime
              mountPath: /w/anime
              readOnly: true
            - name: music
              mountPath: /w/music
              readOnly: true
            - name: youtube
              mountPath: /w/youtube
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: copyparty
        - name: hists
          persistentVolumeClaim:
            claimName: copyparty-hists
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: movies4k
          persistentVolumeClaim:
            claimName: movies4k
        - name: tv
          persistentVolumeClaim:
            claimName: tv
        - name: tv4k
          persistentVolumeClaim:
            claimName: tv4k
        - name: anime
          persistentVolumeClaim:
            claimName: anime
        - name: music
          persistentVolumeClaim:
            claimName: music
        - name: youtube
          persistentVolumeClaim:
            claimName: youtube
