apps/media/deluge-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: media
spec:
  serviceName: deluge
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
    spec:
      securityContext:
        fsGroup: 1000
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:2.2.0-ls371
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1536Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8112
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8112
            periodSeconds: 10
          ports:
            - containerPort: 8112
              name: http-web
            - containerPort: 6881
              name: bittorrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
            - containerPort: 58846
              name: deluged
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: vpn-config
          emptyDir: {}
        - name: downloads
          persistentVolumeClaim:
            claimName: deluge-downloads
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: ssd-rbd
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
