apps/media/copyparty-service.yml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: copyparty
  ports:
    - port: 3923
      name: http
      targetPort: http
