apps/media/tubesync-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tubesync
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tubesync
  ports:
    - port: 4848
      name: http
