apps/media/copyparty-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty
  namespace: media
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - copyparty.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: copyparty
          port: 3923
