apps/media/tubesync-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tubesync
  namespace: media
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - tubesync.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tubesync
          port: 4848
